# skincare-saas-platform

backend/auth-service/: README.md  package.json
backend/auth-service/auth-service/: docker-compose.yml
backend/auth-service/auth-service/src/: swagger.js
backend/auth/auth-service/: .gitignore  package-lock.json  package.json
backend/saas-api/: .env  .gitignore  AGENTS.md  BLACKBOX.md  README.md  TODO.md  TODO_MILESTONE_2.md  pyproject.toml  requirements.txt
backend/saas-api/.ai/: AI_CONTEXT.md  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  DATABASE_SPEC.md  DECISIONS.md  DEVELOPMENT_WORKFLOW.md  PROJECT_STATE.md  ROADMAP.md  SESSION.md
backend/saas-api/alembic/: env.py  script.py.mako
backend/saas-api/alembic/versions/: fb00c8dc3e50_create_merchants_table.py
backend/saas-api/app/: main.py
backend/saas-api/app/api/: router.py
backend/saas-api/app/api/v1/: __init__.py  health.py  merchants.py
backend/saas-api/app/core/: config.py  error_code.py  lifespan.py  logging.py  startup.py  state.py
backend/saas-api/app/core/observability/: __init__.py  context.py  logging.py
backend/saas-api/app/db/: base.py  database.py  engine.py  health.py  session.py
backend/saas-api/app/dependencies/: __init__.py  config.py  database.py  repositories.py  services.py
backend/saas-api/app/middleware/: exception_handler.py
backend/saas-api/app/models/: __init__.py  base.py  merchant.py  protocols.py
backend/saas-api/app/models/enums/: __init__.py  merchant.py
backend/saas-api/app/models/mixins/: __init__.py  merchant_owned.py
backend/saas-api/app/repositories/: base.py  merchant_repository.py
backend/saas-api/app/schemas/common/: error.py  pagination.py  response.py
backend/saas-api/app/schemas/merchant/: __init__.py  base.py  list_response.py  queries.py  request.py  response.py
backend/saas-api/app/services/: merchant_service.py
backend/saas-api/app/services/validators/: merchant_validator.py
backend/saas-api/app/shared/: constants.py  exceptions.py  response_factory.py  responses.py
backend/saas-api/app/shared/generators/: merchant_code.py
backend/saas-api/app/tests/: test_config.py  test_db.py  test_logging.py  test_merchant_repository.py
backend/saas-api/database/: session.py
backend/saas-api/tests/: test.py  test_api_foundation.py  test_logging.py
docs/adr/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/database/: README.md
docs/development/: README.md
docs/security/: README.md
docs/sprint/: README.md
(+57 files in other folders)
