[project]
name = "skincare-saas-platform"
version = "0.1.0"
description = "Enterprise Multi-Tenant Commerce Experience Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Atharva Shihurkar" }
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "loguru>=0.7.3",
    "orjson>=3.11.1",
    "asyncpg>=0.31.0",
]

[dependency-groups]

dev = [

    "black>=25.1.0",

    "ruff>=0.12.2",

    "mypy>=1.16.1",

    "pytest>=8.4.1",

    "pytest-asyncio>=1.0.0",

    "pytest-cov>=6.2.1",

    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

##########################################################
# BLACK
##########################################################

[tool.black]

line-length = 88

target-version = ["py311"]

##########################################################
# RUFF
##########################################################

[tool.ruff]
target-version = "py311"
line-length = 88

exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "alembic/versions",
]

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
]

ignore = [
    "E501",
    "N818",
]

##########################################################
# ISORT
##########################################################

[tool.ruff.lint.isort]

known-first-party = ["app"]

##########################################################
# MYPY
##########################################################
[[tool.mypy.overrides]]

module = "alembic.versions.*"

ignore_errors = true

[tool.mypy]

python_version = "3.11"

warn_return_any = true

warn_unused_configs = true

disallow_untyped_defs = true

ignore_missing_imports = true

##########################################################
# PYTEST
##########################################################

[tool.pytest.ini_options]

testpaths = [
    "tests",
]

asyncio_mode = "auto"
